Made the date changer arrow buttons to be in fixed place and not jumpy because of different month lengths.

--- a/style.css
+++ b/style.css
@@ -33,6 +33,11 @@ h2 {
     font-size: 1.3em;
 }
 
+#dateLabel {
+    display: inline-block;
+    width: 408px;
+}
+
 .icons {
     top: 12px;
     left: 30px;
